--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
 		
 		
 			<article>
+	<h1><a href="https://azurda.github.io/posts/q3vm-hook/">Proxy QUAKE3 VM calls with Frida</a></h1>
+	<b><time>2021-01-23 12:12:12</time></b>
+	
+	<div>
+		Tools used: radare2 for disassembly, Frida for instrumentation.
+Note: This is post is written from my understanding of the q3vm and is not meant to be a throughout explanation of it. If you want a more detailed, accurate description of is internals I encourage you to read about it in Fabien&rsquo;s blog, which helped me fill some gaps.
+What we are going to see in this post:
+ A very basic understanding of how the Q3VM loads the game How to make small instrumentation script with Frida to detect new players connecting and userinfo changes without doing any engine modifications or loading server-side mods.
+		
+			<a href="https://azurda.github.io/posts/q3vm-hook/">Read more...</a>
+		
+	</div>
+</article>
+
+		
+			<article>
 	<h1><a href="https://azurda.github.io/posts/searchpathw/">SearchPathW hook &#43; example code.</a></h1>
 	<b><time>2021-01-22 10:18:48</time></b>
 	
