--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
 		
 		
 			<article>
-	<h1><a href="https://azurda.github.io/posts/clang-memory-layout/">Clang Memory Layout</a></h1>
+	<h1><a href="https://azurda.github.io/posts/clang-memory-layout/">Obtain struct offsets with clang&#39;s memory layout</a></h1>
 	<b><time>10.06.2021 14:17</time></b>
+	
+	<a href="/tags/frida">frida</a>
+	
+	<a href="/tags/structs">structs</a>
 	
 	<div>
 		One of the most interesting things to do when instrumenting binaries with FRIDA is the ability to read structs because these are used by multiple syscalls in different systems, some examples of this usage can be found in the stat API or in Window&rsquo;s GetSystemInfo API: https://docs.microsoft.com/en-us/windows/desktop/api/sysinfoapi/ns-sysinfoapi-system_info
